# place

./: Cargo.toml
src/: main.rs
src/api/: fetch.rs  mod.rs  notion.rs
src/bookmarks/: data.rs  manage.rs  mod.rs  parse.rs
src/filesystem/: mod.rs
src/sharing/: mod.rs  protocol.rs
