[package]
name = "place"
version = "0.1.0"
authors = ["Taylor Thompson <jamestthompson3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
reqwest = { version = "0.10.4", features = ["json"] }
smol = { version = "0.1.7", features = ["tokio02"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
scraper = "0.12.0"
serde_repr = "0.1.6"
thiserror = "1.0.20"
